--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "number-to-words": "^1.2.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "resend": "^4.8.0",
     "tailwind-merge": "^3.3.1",
